[gd_scene load_steps=3 format=2]

[ext_resource path="res://Source/Fonts/EndScreen.tres" type="DynamicFont" id=1]
[ext_resource path="res://Source/EndScreen.gd" type="Script" id=2]

[node name="EndScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.56348
margin_right = 3.56348
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainText" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1276.0
margin_top = -114.5
margin_right = 1276.0
margin_bottom = 114.5
custom_fonts/font = ExtResource( 1 )
text = "Test
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="."]
anchor_left = 0.25
anchor_top = 0.75
anchor_right = 0.25
anchor_bottom = 0.75
margin_left = -371.5
margin_top = -59.5
margin_right = 371.5
margin_bottom = 59.5
custom_fonts/font = ExtResource( 1 )
text = "Restart"

[node name="Quit" type="Button" parent="."]
anchor_left = 0.75
anchor_top = 0.75
anchor_right = 0.75
anchor_bottom = 0.75
margin_left = -207.5
margin_top = -59.5
margin_right = 207.5
margin_bottom = 59.5
custom_fonts/font = ExtResource( 1 )
text = "Quit"
[connection signal="pressed" from="Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
